--- a/c_boot_thymeleaf/src/main/resources/templates/error/500.html
+++ b/c_boot_thymeleaf/src/main/resources/templates/error/500.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1 style="color; red">ERROR, 이상한 짓 하지마!</h1>
+<h1 style="color: red">error 이상한 짓 하지마!</h1>
 </body>
 </html>
