--- a/d_boot_toy/src/main/resources/templates/member/login.html
+++ b/d_boot_toy/src/main/resources/templates/member/login.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <style type="text/css">
-.tit { 
-	display:block;
+
+.tit{
+	display:block; 
 	width:150px;
 }
-.valid-msg {
-	color:red;
-	font-size:0.5vw;
-}
+.valid-msg{color:red;	font-size:0.5vw;}
 
 </style>
 </head>
@@ -17,14 +15,18 @@
 	<h1>로그인</h1>
 	<hr>
 	<form action="/member/login" method="post">
-		<span class="valid-msg" th:unless="${strings.isEmpty(message)}" th:text="${message}"></span>
+		<span class="valid-msg" th:unless="${#strings.isEmpty(message)}" th:text="${message}"></span>
 		<span class='tit'>ID : </span>
-		<input type="text" name="userId">
+		<input type="text" name="userId" id="userId">
 		<span class='tit'>Password : </span>
-		<input type="password" name="password">
+		<input type="password" name="password" id="password">
 		<button>로그인</button>
 	</form>
-	
-	
+
+
+
+
+
+
 </body>
 </html>
