--- a/c_boot_thymeleaf/src/main/resources/templates/fragments.html
+++ b/c_boot_thymeleaf/src/main/resources/templates/fragments.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th ="http://www.thymeleaf.org">
 <head>
-	<th:block th:fragment="flg_head">
+	<th:block th:fragment="frg_head">
    <meta charset="UTF-8">
    <title>Insert title here</title>
    <link rel="stylesheet" href="/css/all.css">
