--- a/c_boot_thymeleaf/src/main/resources/templates/thymeleaf/thymeleaf.html
+++ b/c_boot_thymeleaf/src/main/resources/templates/thymeleaf/thymeleaf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th ="http://www.thymeleaf.org">
 <head>
-	<th:block th:replace="~{fragments :: flg_head}"></th:block>
+	<th:block th:replace="~{fragments :: frg_head}"></th:block>
 <style type="text/css">
 	h1{
 		color:navy;
