--- a/d_boot_toy/src/main/resources/templates/index.html
+++ b/d_boot_toy/src/main/resources/templates/index.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
-<html xmlns:th ="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<th:block th:replace="frgments :: flg_head"></th:block>
+	<th:block th:replace="fragments :: frg_head"></th:block>
 	<style type="text/css">
-	.valid-msg {
-		color:red;
-		font-size:0.5vw;
-	}
-</style>
+		.valid-msg{color:red; font-size:0.5vw;}
+	</style>
 </head>
 <body>
 
 <h1 style="text-align: center;">PCLASS TOY PROJECT</h1>
-<span class="valid-msg" th:unless="${strings.isEmpty(message)}" th:text="${message}"></span>
-
+<span class="valid-msg" th:unless="${#strings.isEmpty(message)}" th:text="${message}"></span>
 
 <th:block th:if="${session.authentication == null}">
 	<h2><a href="/member/login">login</a></h2>
 	<h2><a href="/member/join">회원가입</a></h2>
 </th:block>
-
 
 <th:block th:unless="${session.authentication == null}">
 	<h2>[[${session.authentication.userId}]]님 안녕?</h2>
