--- a/d_boot_toy/src/main/resources/templates/member/mypage.html
+++ b/d_boot_toy/src/main/resources/templates/member/mypage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th ="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<th:block th:replace="fragments :: flg_head"></th:block>
+	<th:block th:replace="fragments :: frg_head"></th:block>
 </head>
 <body>
 <h1>마이페이지</h1>
@@ -23,5 +23,7 @@
 		<td th:text="*{email}"></td>
 	</tr>
 </table>
+
+
 </body>
 </html>
