--- a/d_boot_toy/src/main/resources/templates/board/board-form.html
+++ b/d_boot_toy/src/main/resources/templates/board/board-form.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html xmlns:th="http://www.thymeleaf.org">
-<html>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 
 <th:block th:replace="fragments :: frg_head"></th:block>
